--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -11,8 +11,10 @@ body
   padding: 0;
   /*background: black;*/
   background-color: #FFFFFF;
-  font-family:Tahoma;
+  /*font-family:Tahoma;*/
   /*font-family: Manrope, Sans-serif;*/
+  font-family: Arial, Helvetica, sans-serif;
+  /*font-family: Verdana, sans-serif;*/
   font-size: 19px;
   font-weight: 400;
   line-height: 1.7em;
@@ -160,7 +162,12 @@ p
 
   .container div {
     padding: 2px;
-    /*border: 1px solid #000000;*/
+    border: 1px solid #000000;
+  }
+
+  .container-md div {
+    padding: 2px;
+    border: 1px solid #000000;
   }
 
   .buttons {
@@ -292,6 +299,20 @@ p
 
 .carousel-image {
     text-align: center;
+}
+
+.home-banner {
+    background-image: url("../home-images/post-placeholder.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+     max-width: 100%;
+     height: 500px;;
+     padding: 0px;
+}
+
+.home-banner-about {
+
 }
 
 /*
