--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -37,6 +37,7 @@
 
 <body>
 
+<!--
 	<div class="container text-center" style="">
       <div class="text-normal" style="font-weight: 500; display: inline-block; padding-top: 5px;">
            <div class="" style="">
@@ -44,9 +45,38 @@
           </div>
       </div>
     </div>
+-->
+
+    {% include 'includes/_messages.html' %}
 
 	{% block body %}{% endblock %}
 
+
+	<footer class="">
+		<div class="contaner-md">
+			<div class="row justify-content-center">
+				<hr>
+
+				<div class="col-md-2" style="margin-top: -10px;">
+					<a class="text-dark" href="{{ url_for('blueprint.contact') }}" style="text-decoration:none">Contact</a>
+				</div>
+				<div class="col-md-2" style="margin-top: -10px;">
+					<a class="text-dark" href="{{ url_for('blueprint.testimonials') }}" style="text-decoration:none">Testimonials</a>
+				</div>
+				<div class="col-md-2" style="margin-top: -10px;">
+					<a class="text-dark" href="{{ url_for('blueprint.gallery') }}" style="text-decoration:none">Gallery</a>
+				</div>
+			</div>
+			<div class="row justify-content-center" style="padding-top: 1%;">
+				<div class="col-md-4">
+					<p class="" style="">Call:
+                        <a href="tel:603-235-7427" class="text-dark" style="text-decoration:none">
+                            603.235-7427</a>
+                    </p>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 
   <!-- updated as of 07/2023, Bootstrap's JS bundle that includes Popper -->
