--- a/flaskr/templates/contact.html
+++ b/flaskr/templates/contact.html
@@ -19,8 +19,8 @@
     </header>
 
     <!--contact info-->
-        <div class="container contact-content">
-            <div class="row justify-content-center">
+        <div class="container contact-content fill-height" style="max-height: 100%;">
+            <div class="row content justify-content-center">
                 <div class="col-4 p-3 contact-left-column">
                     <p class="text-md" style="margin-bottom: -3%;">Call:
                         <a href="tel:603-235-7427" class="font-weight-lighter text-dark" style="text-decoration:none">
@@ -42,11 +42,7 @@
                     <p>Monday - Friday, 8:00am - 5:00pm</p>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-4 contact-left-column">
 
-                </div>
-        </div>
 
         </div>
 
