--- a/flaskr/static/css/layout.css
+++ b/flaskr/static/css/layout.css
@@ -20,7 +20,8 @@ body
   line-height: 1.7em;
   width: 100%;
   min-height: 100vh;
-  height: 100%;
+  /*height: 100%;*/
+  height: 100vh;
   display: flex;
   flex-direction: column;
 }
@@ -178,27 +179,6 @@ p
     width: 10%;
   }
 
-  .testimonial-column {
-    width: 50%;
-
-  }
-
-  .testimonial-content {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-
-  .testimonial-table {
-    /*font-family:Tahoma;*/
-    width:70%;
-    background-color: #228228228;
-    box-shadow:5px 5px 10px black;
-  }
-
-
-  .additional-info {
-    padding-top: 10px;
-  }
 
   .center {
     margin: 0;
@@ -321,13 +301,27 @@ p
     max-width: 100%;
 }
 
-.home-projects-container {
+.home-testimonials-container {
+    max-width: 100%;
+    margin-top: 5%;
+    margin-bottom: 10%;
+}
+
+.testimonial-banner {
+    background-image: url("../home-images/post-placeholder.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    max-width: 100%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+
+}
+
+.testimonial-container {
     max-width: 100%;
 }
 
-.testimonial-content {
-    max-width: 100%;
-}
 
 .contact-banner {
     background-image: url("../home-images/post-placeholder.jpg");
@@ -340,9 +334,20 @@ p
 
 }
 
+
 .contact-content {
+    background-image: url("../contact-images/IMG_2872.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
     margin-top: 2%;
     max-width: 100%;
+}
+
+.fill-height {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
 }
 
 .contact-left-column {
@@ -373,3 +378,5 @@ p
     padding: .1em .25em;
     font-size: 150%;
 }*/
+
+
