--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -33,7 +33,7 @@
             <div class="container-md project-content">
                 <div class="row justify-content-center text-center">
                     <div class="col-md">
-                        <h2>View Our Projects</h2>
+                        <h2 class="display-6">View Our Projects</h2>
                     </div>
                 </div>
                 <div class="row justify-content-center text-center" style="margin-top: 2%;">
@@ -45,18 +45,21 @@
             </div>
         </div>
         <!--testimonials preview-->
-        <div class="container home-projects-container">
-            <div class="container-md testimonial-content">
+        <div class="container home-testimonials-container">
+            <div class="container-md">
                 <div class="row justify-content-center text-center">
                     <div class="col-md">
-                        <h2>Read Our Testimonials</h2>
+                        <h2 class="display-6">Read Our Testimonials</h2>
                     </div>
                 </div>
-                <div class="row justify-content-center text-center" style="margin-top: 2%;">
-                    <!--for loop goes here for recent testimonials-->
-                    <div class="col-md">
-
+                <div class="row justify-content-evenly text-center" style="margin-top: 2%;">
+                    {% for i in testimonials %}
+                    <div class="col-sm-4 text-sm" style=""> <!--top right bottom left-->
+                        <p>"{{ i.message[:300] + '...' }}"</p>
+                        <p class="font-med-bold" style="margin-bottom: -3%;">{{ i.name }}</p>
+                        <p>{{ i.town }}, NH</p>
                     </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
