--- a/flaskr/templates/includes/_navbar.html
+++ b/flaskr/templates/includes/_navbar.html
@@ -27,6 +27,7 @@
                 ('/contact', 'contact', 'Contact'),
                 ('/testimonials', 'testimonials', 'Testimonials'),
                 ('/gallery', 'gallery', 'Gallery'),
+                ('/login', 'login', 'Login')
             ] -%}
         {% endif %}
 		{% set active_page = active_page|default('home') -%}
