--- a/flaskr/templates/contact.html
+++ b/flaskr/templates/contact.html
@@ -9,6 +9,7 @@
 <div id="main-content" class="main-content" style="">
     <!--title banner-->
     <header class="contact-banner">
+        {% include 'includes/_messages.html' %}
         <div class="container-md text-center" style="max-width: 100%;">
             <div class="row justify-content-start">
                 <div class="col-md-auto ">
@@ -19,32 +20,30 @@
     </header>
 
     <!--contact info-->
-        <div class="container contact-content fill-height" style="max-height: 100%;">
-            <div class="row content justify-content-center">
-                <div class="col-4 p-3 contact-left-column">
-                    <p class="text-md" style="margin-bottom: -3%;">Call:
-                        <a href="tel:603-235-7427" class="font-weight-lighter text-dark" style="text-decoration:none">
-                            (603) 235-7427</a>
-                    </p>
-                    <p class="text-md">Email:
-                        <a href="mailto:allangilbertbuilders@gmail.com" class="font-weight-lighter text-dark" style="text-decoration:none">
-                            allangilbertbuilders@gmail.com
-                        </a>
-                    </p>
-                    <p style="margin-bottom: 0;"><small>Follow us on Facebook</small></p>
-                    <a class="" style="text-decoration:none" href="https://www.facebook.com/allangilbertbuilders/">
-                        <i class="fab fa-facebook fa-lg social-icons"></i>
+    <div class="container contact-content fill-height" style="max-height: 100%;">
+        <div class="row content justify-content-center">
+            <div class="col-4 p-3 contact-left-column">
+                <p class="text-md" style="">Call:
+                    <a href="tel:603-235-7427" class="font-weight-lighter text-dark" style="text-decoration:none">
+                        (603) 235-7427</a>
+                </p>
+                <p class="text-md">Email:
+                    <a href="mailto:allangilbertbuilders@gmail.com" class="font-weight-lighter text-dark" style="text-decoration:none">
+                        allangilbertbuilders@gmail.com
                     </a>
-                </div>
-
-                <div class="col-4 p-3 contact-right-column" style="text-align: right;">
-                    <p>Hours of Operation </p>
-                    <p>Monday - Friday, 8:00am - 5:00pm</p>
-                </div>
+                </p>
+                <p style=""><small>Follow us on Facebook</small></p>
+                <a class="" style="text-decoration:none" href="https://www.facebook.com/allangilbertbuilders/">
+                    <i class="fab fa-facebook fa-lg social-icons"></i>
+                </a>
             </div>
 
-
+            <div class="col-4 p-3 contact-right-column" style="text-align: right;">
+                <p>Hours of Operation </p>
+                <p>Monday - Friday, 8:00am - 5:00pm</p>
+            </div>
         </div>
+    </div>
 
 
 </div>
