--- a/flaskr/templates/layout.html
+++ b/flaskr/templates/layout.html
@@ -47,12 +47,13 @@
     </div>
 -->
 
-    {% include 'includes/_messages.html' %}
+    <!--{% include 'includes/_messages.html' %}-->
+
 
 	{% block body %}{% endblock %}
 
 
-	<footer class="">
+	<footer class="" style="">
 		<div class="contaner-md">
 			<div class="row justify-content-center">
 				<hr>
