--- a/flaskr/templates/home.html
+++ b/flaskr/templates/home.html
@@ -8,6 +8,7 @@
     <div id="main-content" class="main-content" style="">
         <!--home banner-->
         <div class="container home-banner">
+            {% include 'includes/_messages.html' %}
             <div class="container-md">
                 <div class="row justify-content-center text-center" style="padding-top: 10%;">
                     <div class="col-md" style="">
@@ -45,24 +46,27 @@
             </div>
         </div>
         <!--testimonials preview-->
-        <div class="container home-testimonials-container">
-            <div class="container-md">
-                <div class="row justify-content-center text-center">
-                    <div class="col-md">
-                        <h2 class="display-6">Read Our Testimonials</h2>
-                    </div>
-                </div>
-                <div class="row justify-content-evenly text-center" style="margin-top: 2%;">
-                    {% for i in testimonials %}
-                    <div class="col-sm-4 text-sm" style=""> <!--top right bottom left-->
-                        <p>"{{ i.message[:300] + '...' }}"</p>
-                        <p class="font-med-bold" style="margin-bottom: -3%;">{{ i.name }}</p>
-                        <p>{{ i.town }}, NH</p>
-                    </div>
-                    {% endfor %}
+        <div class="container-md home-testimonials-container">
+            <a href="{{ url_for('blueprint.testimonials') }}" style="text-decoration: none;">
+            <div class="row justify-content-center text-center">
+                <div class="col-md">
+                    <h2 class="display-6 text-dark">
+                        Read Our Testimonials
+                    </h2>
                 </div>
             </div>
+            <div class="row justify-content-evenly text-center" style="margin-top: 2%;">
+                {% for i in testimonials %}
+                <div class="col-sm-5 text-sm text-dark" style=""> <!--top right bottom left-->
+                    <p>"{{ i.message[:300] + '...' }}"</p>
+                    <p class="font-med-bold" style="margin-bottom: 0%;">{{ i.name }}</p>
+                    <p>{{ i.town }}, NH</p>
+                </div>
+                {% endfor %}
+            </div>
+            </a>
         </div>
+
     </div>
 
 
