--- a/flaskr/templates/includes/_messages.html
+++ b/flaskr/templates/includes/_messages.html
@@ -1,7 +1,17 @@
+{% block head %}
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+{% endblock %}
+
 {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
     {% for category, message in messages %}
-      <div class="alert alert-{{ category }}">{{ message }}</div>
+    <div class="container-md" style="">
+        <div class="row justify-content-center text-center text-md" style="font-weight: 500;">
+          <div class="col-md-auto" style="">
+            <div class="alert alert-{{ category }}">{{ message }}</div>
+          </div>
+        </div>
+    </div>
     {% endfor %}
   {% endif %}
 {% endwith %}
