--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -2,6 +2,7 @@
 {% set active_page = "login" %}
 {% block body %}
 
+    {% include 'includes/_messages.html' %}
 
      <form action="" method="POST">
       <div class="text-center mb-4 p-5">
