--- a/flaskr/templates/testimonial_form.html
+++ b/flaskr/templates/testimonial_form.html
@@ -1,23 +1,28 @@
-    {% extends 'layout.html' %}
 
-    {% block body %}
-    <h2 class="display-4 screen_titles"><strong>Add your testimonial</strong></h2>
-    <hr>
+{% extends 'layout.html' %}
 
-    <br>
-    <br>
-    <div class="text-center">
-        <h5 class="font-weight-lighter">How was your experience with Allan Gilbert Builders?</h5>
-    </div>
+{% block body %}
+
+<div id="main-content" class="main-content" style="">
+    <!--title banner-->
+    <header class="testimonial-banner">
+        {% include 'includes/_messages.html' %}
+        <div class="container-md text-center" style="max-width: 100%;">
+            <div class="row justify-content-start">
+                <div class="col-md-auto ">
+                    <h1 class="screen_titles" style="font-weight: 600;">Add your testimonial</h1>
+                </div>
+            </div>
+        </div>
+    </header>
 
     {% set town = 'town' %}
     {% from "includes/_formhelpers.html" import render_field %}
         <!--This iterates the form fields-->
-    <div class="container-md" style="padding-top: 30px; padding-left: 15%; padding-right: 15%;">
-        <form id="contact-form" method="post" action="" class="">
+    <div class="container testimonial-form fill-height" style="max-height: 100%;">
+        <form id="testimonial-form" method="post" action="" class="">
             {% for field in form %}
-            <div class="row justify-content-center text-md" style="font-weight: 500;">
-
+            <div class="row content justify-content-center text-md" style="font-weight: 500;">
                 <div class="col-md-2 form-labels">
                     <label>{{field.label}}</label>
                 </div>
@@ -27,9 +32,8 @@
                     {{field(class="form-control", disabled="True")}}
                     {% endif %}
                 </div>
-
-            {% endfor %}
             </div>
+            {% endfor %}
 
             <div class="row justify-content-center text-center">
                 <div class="col-sm" style="padding-left: 5%; padding-right: 5%;">
@@ -41,5 +45,7 @@
         </form>
     </div>
 
+</div>
 
-    {% endblock %}
+
+{% endblock %}
