--- a/flaskr/templates/admin.html
+++ b/flaskr/templates/admin.html
@@ -34,31 +34,51 @@
 </div>
 
 {% from "includes/_formhelpers.html" import render_field %}
-<div style="margin-bottom: 20px;">
+<div class="container-md" style="margin-bottom: 20px;">
     <form method="post" action="" class="" enctype="multipart/form-data"><!-- enctype="multipart/form-data"-->
         <div class="row align-items-end">
             <!--{% from "includes/_formhelpers.html" import render_field %}-->
             <div class="col-4 text-md admin-forms font-med-bold" style="margin-top: 10px;">
-                <label>Upload a photo</label>
+                <h1 class="display-6">Upload Images</h1>
             </div>
         </div>
-        <div class="row align-items-start">
-             <div class="col-4 admin-forms">
-                {{ render_field(image_form.image, class="form-control", style="margin-top: -5%;", multiple="multiple") }}
-            </div>
-            <div class="col-md-auto">
-                <button class="btn btn-outline-primary" type="submit" name="upload-image">Upload</button>
-            </div>
-        </div>
-        <div class="row align-items-start">
+            <div class="row justify-content-center text-md" style="font-weight: 500;">
 
-        </div>
+                <div class="col-md-3 form-labels font-med-bold">
+                    <label>{{image_form.project.label}}</label>
+                </div>
+                 <div class="col-md-3 form-labels text-center">
+                    <label>{{image_form.project_type(style="width:100%; height: 100%;")}}</label>
+                </div>
+            </div>
+            <div class="row justify-content-center text-md" style="font-weight: 500;">
+                <div class="col-md-3 form-labels">
+                    {% if image_form.project_type.value == New %}
+                    {{ image_form.new_project(style="width:100%; height: 100%;") }}
+                    {% else %}
+                    {{ image_form.project(style="width:100%; height: 100%;") }}
+                    {% endif %}
+                </div>
+                 <div class="col-md-3 form-labels">
+                    {{ render_field(image_form.image, class="form-control", style="margin-top: -5%;", multiple="multiple") }}
+                </div>
+            </div>
+            <div class="row justify-content-center text-center">
+                <div class="col-md">
+                    <button class="buttons btn btn-outline-primary"
+                        data-callback='onSubmit'
+                        data-action='submit'
+                        name="upload-image">Upload</button>
+                    <!--<p class="buttons"><input type="Submit" class="btn btn-outline" value="Send"></p>-->
+                </div>
+            </div>
     </form>
 </div>
 
 
+
 <div class="container-md admin-forms" style="padding-top: 10px;">
-    <h2>Pending Testimonials</h2>
+    <h2 class="display-6">Pending Testimonials</h2>
     <div class="container-md" style="padding-top: 20px;">
         {% if pending_testimonials %}
         <table class="table table-hover table-light testimonial-table" align="center">
