--- a/flaskr/templates/view_images.html
+++ b/flaskr/templates/view_images.html
@@ -24,6 +24,9 @@
                 <td>
                     <div>
                         <img class="d-block w-100" src="{{ url_for('static', filename=photo[0]) }}" alt="{{ i }}">
+                        <p>photo[0]: {{photo[0]}}</p>
+                        <p>photo[1]: {{photo[1]}}</p>
+                        <p>upload_folder: {{url_for('static', filename=photo[0])}}</p>
                     </div>
                 </td>
                 <td class="btn btn-default">
