completed project creation and thumbnails for view all projects - need to add the pillow resizing and add ability to add photos in project folder

--- a/flaskr/templates/includes/_navbar.html
+++ b/flaskr/templates/includes/_navbar.html
@@ -19,7 +19,7 @@
                 ('/testimonials', 'testimonials', 'Testimonials'),
                 ('/gallery', 'gallery', 'Gallery'),
                 ('/admin', 'admin', 'Admin Portal'),
-                ('/admin/view-images', 'viewImages', 'View Images')
+                ('/admin/view-projects', 'viewProjects', 'View Projects')
             ] -%}
         {% else %}
             {% set navigation_bar = [
