began work on adding uploading via project screen - flash messages aren't appearing issue

--- a/flaskr/templates/admin.html
+++ b/flaskr/templates/admin.html
@@ -33,7 +33,7 @@
         {% endfor %}
     </form>
 </div>
-{% set type = new %}
+
 {% from "includes/_formhelpers.html" import render_field %}
 <div class="container-md" style="margin-bottom: 20px;">
         <div class="row align-items-end">
@@ -58,7 +58,7 @@
                 </div>
             </form>
         </div>
-    <form method="post" action="" class="" enctype="multipart/form-data"><!-- enctype="multipart/form-data"-->
+    <form method="post" action="" class="" enctype="multipart/form-data">
         <div class="row justify-content-center text-md" style="font-weight: 500;">
 
             <div class="col-md-3 form-labels" id="tab_2" data-tab-info>
