--- a/flaskr/templates/view_project.html
+++ b/flaskr/templates/view_project.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-{% set active_page = "viewImages" %}
+{% set active_page = "viewProjects" %}
 
 {% block body %}
 
@@ -14,26 +14,50 @@
     <hr>
 </div>
 
+{% from "includes/_formhelpers.html" import render_field %}
+<div class="container-md" style="margin-bottom: 20px;">
+    <div class="row align-items-end justify-content-center">
+        <div class="col-4 text-md admin-forms font-med-bold text-center" style="margin-top: 10px;">
+            <h1 class="display-6">Upload Images</h1>
+        </div>
+    </div>
+
+    <form method="post" action="" class="" enctype="multipart/form-data">
+        <div class="row justify-content-center text-md" style="font-weight: 500;">
+            <div class="col-md-3 form-labels">
+                    {{ render_field(image_form.image, class="form-control", style="margin-top: -5%;", multiple="multiple") }}
+            </div>
+        </div>
+        <div class="row justify-content-center text-center">
+            <div class="col-md">
+                <button class="buttons btn btn-outline-primary"
+                    data-callback='onSubmit'
+                    data-action='submit'
+                    name="upload-image">Upload</button>
+            </div>
+        </div>
+    </form>
+</div>
 
     <!-- images from static/uploads -->
-<div class="image-container" style="clear:both;">
-    <br>
-    {% for photo in all_photos %}
-    <table class="table table-light" align="center" style="width:90%; text-align:center; box-shadow:5px 5px 10px black; margin-bottom: 30px;">
-        <tr align="left">
-            <td>
+<div class="container-md image-container" style="clear:both;">
+    <div class="row justify-content-evenly">
+        {% for photo in all_photos %}
+        <div class="col-md-4 text-center">
+            <div>
                 <div>
                     <img class="d-block w-100" src="{{ url_for('static', filename=photo[0]) }}" alt="{{ i }}">
                 </div>
-            </td>
-            <td class="btn btn-default">
+            </div>
+            <div class="btn btn-default">
               <form action="{{ url_for('blueprint.delete_image', project_name=project_name, filename=photo[1]) }}" method="post">
                   <input type="submit" value="Delete" name="delete-button" onclick="return confirm('Are you sure you want to delete this image?');" class="btn btn-danger">
               </form>
-            </td>
-        </tr>
-    </table>
-    {% endfor %}
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
 </div>
 
 
